# uu-ai-data-mining

./: .python-version  Data Description.ipynb  Data Description.py  README.md  _classification_tree_assignment_dirtystuff.py  bestsplit.py  gini.py  pyproject.toml  test.py  test_eclipse.py  tree.py
data/: credit.txt
pa2/: Practical Assignment 2.ipynb  Practical Assignment 2.py  main.py  test.eps
pa2/plots/: acc_vs_alpha.eps  lg_most_important_fake.eps  lg_most_important_genuine.eps  mnb_most_important_genuine.eps  sparse_terms_both.eps  sparse_terms_unigram.eps  word_frequency.eps
prac-exs/: ex1.py
