[tool.poetry]
name = "uu-data-mining"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "uu_data_mining"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
